<resources>
    <string name="app_name">Catch Pisi </string>
    <string name="title">Catch Pisi</string>
    <string name="startButton">start</string>
    <string name="startButtonLevel2">start level 2</string>
    <string name="startButtonLevel3">start level 3</string>
    <string name="startButtonLevel4">start level 4</string>
    <string name="exitButton">exit</string>
    <string name="scoreText">Score : 000</string>
    <string name="scoreActionBar">Score : 0</string>
    <string name="TimeActionBar">Time : 00</string>
    <string name="contentDescription">cath pisi</string>
</resources>
