<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.havare.catchpisi.LevelTwo">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_row="0"
            android:contentDescription="@string/contentDescription"
            android:onClick="increaseGameScoreLevelTwo"
            app:srcCompat="@drawable/character" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_row="0"
            android:contentDescription="@string/contentDescription"
            android:onClick="increaseGameScoreLevelTwo"
            app:srcCompat="@drawable/character" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_row="0"
            android:contentDescription="@string/contentDescription"
            android:onClick="increaseGameScoreLevelTwo"
            app:srcCompat="@drawable/character" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            android:layout_row="1"
            android:contentDescription="@string/contentDescription"
            android:onClick="increaseGameScoreLevelTwo"
            app:srcCompat="@drawable/character" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            android:layout_row="1"
            android:contentDescription="@string/contentDescription"
            android:onClick="increaseGameScoreLevelTwo"
            app:srcCompat="@drawable/character" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            android:layout_row="1"
            android:contentDescription="@string/contentDescription"
            android:onClick="increaseGameScoreLevelTwo"
            app:srcCompat="@drawable/character" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            android:layout_row="2"
            android:contentDescription="@string/contentDescription"
            android:onClick="increaseGameScoreLevelTwo"
            app:srcCompat="@drawable/character" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            android:layout_row="2"
            android:contentDescription="@string/contentDescription"
            android:onClick="increaseGameScoreLevelTwo"
            app:srcCompat="@drawable/character" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_column="2"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            android:layout_row="2"
            android:contentDescription="@string/contentDescription"
            android:onClick="increaseGameScoreLevelTwo"
            app:srcCompat="@drawable/character" />


    </GridLayout>

    <TextView
        android:id="@+id/textTimeActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/customborder"
        android:text="@string/TimeActionBar"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textScoreActionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/customborder"
        android:text="@string/scoreActionBar"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
